--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,16 @@ body {
         content: "";
        
       /*  background-size: cover; */
-        position: absolute;
+        position: fixed;
         top: 0px;
         right: 0px;
         bottom: 0px;
         left: 0px;
         background-image: url("./flag.jpg");
         background-size: cover; 
-        background-position: top center; 
+         background-position: top center; 
         opacity: 0.25;
+        
     }
 }
 
