--- a/styles.css
+++ b/styles.css
@@ -175,8 +175,8 @@ li {
 }
 
 .point {
-    color: #56A0D3;
-    font-style: italic;
+    /* color: #56A0D3; */
+    /* font-style: italic; */
     text-transform: none;
 }
 
@@ -208,7 +208,7 @@ nav {
     align-content: center;
 }
 
-a{
+a {
    /* pointer-events: none; */
    /* cursor: default; */
     text-decoration: none;
