--- a/styles.css
+++ b/styles.css
@@ -353,3 +353,13 @@ a {
         /* justify-content: center; */
         justify-items: center;
     }
+
+    .contactdiv {
+        margin-top: 40px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .emailfriend {
+        color:darkgoldenrod;
+    }
