--- a/styles.css
+++ b/styles.css
@@ -334,6 +334,7 @@ a {
         isolation: isolate;
         justify-items: left; 
         justify-content: center;
+        font-size: 110%;
     }
 
     .contactform {
