--- a/styles.css
+++ b/styles.css
@@ -249,10 +249,12 @@ a {
 
     display: inline;
   margin: auto;
-  width: 15%;
+  width: 30%;
   float: right;
   margin-right: 100px;
   padding-right: 100px;
+  padding-bottom: 40px;
+  margin-bottom: 40px;
   }
 
   .kvkfamily {
