changed to silver logo

--- a/styles.css
+++ b/styles.css
@@ -373,3 +373,11 @@ a {
         padding: 20px; 
 
     }
+
+    /* #lname {
+        width: 350px;
+        justify-items: center;
+        align-items: center;
+        justify-items: center;
+        justify-content: center;
+    } */
