--- a/styles.css
+++ b/styles.css
@@ -389,8 +389,12 @@ a {
             align-items: center;
             justify-items: center;
             text-align: center;
-            display: flex;
+            display: block;
             /* float: ; */
+        }
+
+        nav li a {
+            display: block;
         }
     
         .pipe {
