added 80% font size for 433 px or less for banner

--- a/styles.css
+++ b/styles.css
@@ -414,4 +414,15 @@ a {
         .pipe {
             display: none;
         }
+
+        
+
     }
+
+    @media screen and (max-width: 433px) {
+
+    .banner {
+        font-size: 80%;
+    }
+
+}
