--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
 }
 
 /* NAVIGATION BAR */
+nav div ul li a {
+  color: white;
+}
 nav {
   background-color: #003366;
   padding: 1rem 0;
@@ -17,6 +20,7 @@ nav ul {
 }
 
 nav ul li {
+  color: white;
   display: inline-block;
   margin: 0 1.5rem;
   font-size: 1.25rem;
@@ -25,7 +29,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white;
+  color: white !important;
   text-decoration: none;
   transition: color 0.3s ease, text-decoration 0.3s ease;
   line-height: 1.5;
@@ -33,7 +37,7 @@ nav ul li a {
 
 
 nav ul li a:hover {
-  color: red;
+  color: red !important;
   text-decoration: underline;
 }
 
