--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,15 @@ img {
   margin: 1rem auto;
 }
 
-.kvk2, .kvk5, .kvkandmom, .kvkaward, .kvkspeaking {
+.kvk2, .kvk5, .kvkandmom, .kvkaward, .kvkspeaking .keithcunningham {
   display: block;
   margin: 2rem auto;
   width: 30%;
   border-radius: 8px;
+}
+
+.keithcunningham {
+  max-width: 800px;
 }
 
 ul, ul li {
