--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@ p, .effective, .meet, p i {
     max-width: none;
   }
 
-  .kvk2, .kvk5, .kvkandmom {
+  .kvk2, .kvk5, .kvkandmom, .keithcunningham {
     width: 90%;
   }
 
