--- a/styles.css
+++ b/styles.css
@@ -99,13 +99,15 @@ img {
  .kvkandmom, 
  .kvkaward,
   .kvkspeaking,
-   .keithcunningham 
-   .district7 {
+   .keithcunningham,
+  {
   display: block;
   margin: 2rem auto;
   width: 30%;
   border-radius: 8px;
 }
+
+.district7 
 
 .keithcunningham {
   max-width: 800px;
