--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ img {
  .kvkandmom, 
  .kvkaward,
   .kvkspeaking,
-   .keithcunningham,
+   .keithcunningham
   {
   display: block;
   margin: 2rem auto;
