fixed css for photos

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ img {
  .kvkandmom, 
  .kvkaward,
   .kvkspeaking,
-   .keithcunningham
+   .keithcunningham,
    .ryecityhall
   {
   display: block;
