changed size of photo city hall

--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,8 @@ img {
  .kvkandmom, 
  .kvkaward,
   .kvkspeaking,
-   .keithcunningham,
-   .ryecityhall
+   .keithcunningham
+   /* .ryecityhall */
   {
   display: block;
   margin: 2rem auto;
