--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,6 @@ img {
 }
 
 .kvk2,
- .kvk5, 
  .kvkandmom, 
  .kvkaward,
   .kvkspeaking,
@@ -113,7 +112,12 @@ img {
   width: 30%;
   border-radius: 8px;
 }
-
+.kvk5 {
+  display: block;
+  margin: 2rem auto;
+  width: 25%;
+  border-radius: 8px;
+}
    .ryecityhall {
     border-radius: 8px;
    }
@@ -270,7 +274,11 @@ p, .effective, .meet, p i {
 
 } */
 
-
+.libraryphoto {
+  width: 30%;
+  max-width: 250px;
+  border-radius: 8px;
+}
 
 .nav-container {
   display: flex;
