--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,12 @@ img {
   width: 30%;
   border-radius: 8px;
 }
+.kvkspeaking {
+  display: block;
+  margin: 2rem auto;
+  width: 35%;
+  border-radius: 8px;
+}
 .kvk5 {
   display: block;
   margin: 2rem auto;
