--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,9 @@ img {
 }
    .ryecityhall {
     border-radius: 8px;
+    display: block;
+    margin: 2rem auto;
+    width: 40%;
    }
 /* .district7 {
 
@@ -159,14 +162,14 @@ ul, ol li {
 
 
 .kvk3 {
-  width: 30%;
-  max-width: 250px;
+  width: 35%;
+  /* max-width: 300px; */
   border-radius: 8px;
 }
 
 .kvkfamily {
-  width: 38%;
-  max-width: 360px;
+  width: 50%;
+  /* max-width: 36px; */
   border-radius: 8px;
 }
 
@@ -174,6 +177,8 @@ ul, ol li {
   margin: 1rem;
   float: none;
 }
+
+
 
 /* HEADINGS */
 h1 {
@@ -236,6 +241,9 @@ p, .effective, .meet, p i {
     margin: 1rem auto;
     max-width: none;
   }
+  .kvk3 {
+    width: 70%;
+  }
 
   .kvk2, .kvk5, .kvkandmom, .keithcunningham {
     width: 90%;
@@ -257,6 +265,10 @@ p, .effective, .meet, p i {
 
   .district7 {
     width: 100%;
+  }
+
+  .ryecityhall {
+    width: 80%;
   }
 }
 
