added border radius 8px to seven pics on around district 7

--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,17 @@ p, .effective, .meet, p i {
   text-align: left;
 }
 
+.station,
+.cosmo,
+.boiano,
+.park,
+.davetalking,
+.bareburger,
+.annamaria
+{
+  border-radius: 8px;
+
+}
 
 .kvk-row {
   display: flex;
