--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,9 @@ p, .effective, .meet, p i {
 .park,
 .davetalking,
 .bareburger,
-.annamaria
+.annamaria,
+.coriander,
+.brenda
 {
   border-radius: 8px;
 
