--- a/styles.css
+++ b/styles.css
@@ -353,3 +353,13 @@ p, .effective, .meet, p i {
 .navbar-dark .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
+
+.audio-section {
+  text-align: center;
+  margin: 2rem auto;
+}
+
+.audio-section audio {
+  width: 80%;
+  max-width: 400px;
+}
